Added suggested anime part, modified Anime

--- a/SuggestAnime.html
+++ b/SuggestAnime.html
@@ -27,7 +27,7 @@
 
 
 	<script type="text/javascript" src="Anime.js"></script>
-	<script> load("Hunter X Hunter"); </script>
+	<script type="text/javascript" src="SuggestAnime.js"></script>
 </body>
 
 </html>
