Initial adding of edit functionality

--- a/User_Profile.html
+++ b/User_Profile.html
@@ -29,9 +29,9 @@
  <div id="ProfileInfo">
  	<h1>Profile Information</h1>
  	<ul>
- 		<li><h2>Name: Black Ninja</h2></li>
- 		<li><h2>Email: black.ninja@gmail.com</h2></li>
- 		<li><h2>Date of Birth: 01/01/1995</h2></li>
+ 		<li class="name"><h2>Name: Black Ninja</h2></li>
+ 		<li class="email"><h2>Email: black.ninja@gmail.com</h2></li>
+ 		<li class="dob"><h2>Date of Birth: 01/01/1995</h2></li>
  	</ul>
  </div>
 
@@ -47,8 +47,11 @@
  <div id="Reviews">
  	<h1>Reviews</h1>
  </div>
+<form id="editProfile">
+ 	<button type="button" id="edit_profile">Edit Profile</button>
+ </form>
 
- <button type="button" id="editProfile">Edit Profile</button>
+ <script type="text/javascript" src="User_Profile.js"></script>
 
  </body>
 
