Added hrefs to other pages for navigation bar

--- a/User_Profile.html
+++ b/User_Profile.html
@@ -14,11 +14,10 @@
 	</div>
  <div id="NavigationBar">
 	<ul>
-	  <li><a href="#home">All Anime List</a></li>
-	  <li><a href="#news">Top Anime</a></li>
-	  <li><a href="#contact">Reviews</a></li>
-	  <li><a href="#contact">Request an Anime</a></li>
-	  <li style="float:right"><a href="#about">Login/Register</a></li>
+	  <li><a href="mainPage.html">Home</a></li>
+	  <li><a href="#allAnimeList">All Anime List</a></li>
+	  <li><a href="SuggestAnime.html">Request an Anime</a></li>
+	  <li style="float:right"><a href="loginRegister.html">Login/Register</a></li>
 	</ul>
  </div>
 
