changed password chars for stars

--- a/LoginRegister.html
+++ b/LoginRegister.html
@@ -26,7 +26,7 @@
 		<form id="user_credentials">
 			<input id="username" class="input_element" type="text" placeholder="Username">
 			<br><br>
-			<input id="password" class="input_element" type="text" placeholder="Password">
+			<input id="password" class="input_element" type="password" placeholder="Password">
 			<br><br>
 			<input id="login" type="submit" value="Login">
 			<input id="register" type="submit" value="Register">
