fixed colours and tab names

--- a/Admin.html
+++ b/Admin.html
@@ -3,7 +3,7 @@
 
 <head> 
  	<meta charset="utf-8">
-    <title>Template for CSC309 Project</title>
+    <title>Admin Page</title>
     <link rel="stylesheet" type="text/css" href="Admin.css">
  </head>
 
