--- a/Report.html
+++ b/Report.html
@@ -3,7 +3,7 @@
 
 <head> 
  	<meta charset="utf-8">
-    <title>Template for CSC309 Project</title>
+    <title>Report User Page</title>
     <link rel="stylesheet" type="text/css" href="Report.css">
  </head>
 
