Added links to the anime page

--- a/mainPage.html
+++ b/mainPage.html
@@ -49,6 +49,7 @@
 	</div>
 	
 	<script type="text/javascript" src="mainPage.js"></script>
+	<script type="text/javascript" src="Anime.js"></script>
 
  </body>
 
