Edit Functionality Complete (Upload picture remaining)

--- a/User_Profile.html
+++ b/User_Profile.html
@@ -37,14 +37,18 @@
  <div id="ProfileStatistics">
  	<h1>Statistics</h1>
  	<ul>
- 		<li><h2>Number of Review(s): </h2></li>
- 		<li><h2>Favorite Anime: </h2></li>
- 		<li><h2>Pending Review(s):</h2></li>
+ 		<li><h2>Number of Review(s): 2</h2></li>
+ 		<li><h2>Favorite Anime: DeathNote</h2></li>
+ 		<li><h2>Pending Review(s): 0</h2></li>
  	</ul>
  </div>
 
  <div id="Reviews">
  	<h1>Reviews</h1>
+ 	<ul>
+ 		<li><p>Mob Psycho 100 S2 - It rarely happens that second season of any anime tops the first season season but its not the case with the Mob Psycho 100, because its clearly improves over 1st season artistically and story-wise too. Rating 10/10</p></li>
+ 		<li><p>It rarely happens that second season of any anime tops the first season season but its not the case with the Mob Psycho 100, because its clearly improves over 1st season artistically and story-wise too. Rating 10/10</p></li>
+ 	</ul>
  </div>
 <form id="editProfile">
  	<button type="button" id="edit_profile">Edit Profile</button>
