updated links for all anime list

--- a/Admin.html
+++ b/Admin.html
@@ -15,7 +15,7 @@
 	<div id="NavigationBar">
 		<ul>
 			<li><a href="mainPage.html">Home</a></li>
-			<li><a href="#home">All Anime List</a></li>	
+			<li><a href="AllAnime.html">All Anime List</a></li>	
 			<li><a href="SuggestAnime.html">Request an Anime</a></li>
 			<li style="float:right"><a href="loginRegister.html">Login/Register</a></li
 		</ul>
