--- a/User_Profile.html
+++ b/User_Profile.html
@@ -15,9 +15,9 @@
  <div id="NavigationBar">
 	<ul>
 	  <li><a href="mainPage.html">Home</a></li>
-	  <li><a href="#allAnimeList">All Anime List</a></li>
+	  <li><a href="AllAnime.html">All Anime List</a></li>
 	  <li><a href="SuggestAnime.html">Request an Anime</a></li>
-	  <li style="float:right"><a href="loginRegister.html">Login/Register</a></li>
+	  <li style="float:right" id="userName"><a href="User_Profile.html">Black Ninja</a></li>
 	</ul>
  </div>
 
