--- a/Anime.html
+++ b/Anime.html
@@ -15,7 +15,7 @@
 	<div id="NavigationBar">
 		<ul>
 			<li><a href="mainPage.html">Home</a></li>
-			<li><a href="#home">All Anime List</a></li>	
+			<li><a href="AllAnime.html">All Anime List</a></li>	
 			<li><a href="SuggestAnime.html">Request an Anime</a></li>
 			<li style="float:right"><a href="loginRegister.html">Login/Register</a></li>
 		</ul>
@@ -26,7 +26,7 @@
 
 
 	<script type="text/javascript" src="Anime.js"></script>
-	<script> load("Hunter X Hunter"); </script>
+	<script> load("Kimi No Na Wa");load("Hunter X Hunter"); </script>
 </body>
 
 </html>
