--- a/AllAnime.html
+++ b/AllAnime.html
@@ -3,14 +3,14 @@
 
 <head> 
  	<meta charset="utf-8">
-    <title>Great Anime List</title>
+    <title>All Anime</title>
     <link rel="stylesheet" type="text/css" href="AllAnime.css">
  </head>
 
 
  <body onload="update_all_anime_page();">
  	<div class="header">
-  		<h1>Header</h1>
+  		<h1>Great Anime List</h1>
 	</div>
 	<div id="NavigationBar">
 		<ul>
