--- a/Report.html
+++ b/Report.html
@@ -21,7 +21,7 @@
 		</ul>
 	</div>
  
-	<div id="report_block" align="center">
+	<div id="report_block">
 		<h1>Report a User</h1>
 		<form id="input_elements">
 			<input id="name" class="input_element" type="text" placeholder="Reviewer Name">
