--- a/User_Profile.html
+++ b/User_Profile.html
@@ -17,7 +17,7 @@
 	  <li><a href="mainPage.html">Home</a></li>
 	  <li><a href="AllAnime.html">All Anime List</a></li>
 	  <li><a href="SuggestAnime.html">Request an Anime</a></li>
-	  <li style="float:right" id="userName"><a href="User_Profile.html">Black Ninja</a></li>
+	  <li id="userName"><a href="User_Profile.html">Black Ninja</a></li>
 	</ul>
  </div>
 
