--- a/LoginRegister.html
+++ b/LoginRegister.html
@@ -17,7 +17,7 @@
 			<li><a href="mainPage.html">Home</a></li>
 			<li><a href="AllAnime.html">All Anime List</a></li>	
 			<li><a href="SuggestAnime.html">Request an Anime</a></li>
-			<li style="float:right"><a href="loginRegister.html">Login/Register</a></li>
+			<li id = "userName"><a href="loginRegister.html">Login/Register</a></li>
 		</ul>
 	</div>
  
