--- a/SuggestAnime.html
+++ b/SuggestAnime.html
@@ -14,7 +14,7 @@
 	</div>
 	<div id="NavigationBar">
 		<ul>
-			<li><a href="mainPage.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="AllAnime.html">All Anime List</a></li>	
 			<li><a href="SuggestAnime.html">Request an Anime</a></li>
 			<li id="userName"><a href="loginRegister.html">Login/Register</a></li>
