Added another review, and comments to the code

--- a/Anime.html
+++ b/Anime.html
@@ -26,7 +26,7 @@
 
 
 	<script type="text/javascript" src="Anime.js"></script>
-	<script> load("Kimi No Na Wa"); </script>
+	<script> load("Kimi No Na Wa");load("Hunter X Hunter"); </script>
 </body>
 
 </html>
