Added the Phase1.txt file, added comments to the JS file and dummy functions

--- a/User_Profile.html
+++ b/User_Profile.html
@@ -39,7 +39,7 @@
  	<ul>
  		<li><h2>Number of Review(s): 2</h2></li>
  		<li><h2>Favorite Anime: DeathNote</h2></li>
- 		<li><h2>Pending Review(s): 0</h2></li>
+ 		<li><h2>Pending Reports(s): 0</h2></li>
  	</ul>
  </div>
 
