fixed some Admin stuff and added comments to js files

--- a/Admin.html
+++ b/Admin.html
@@ -159,6 +159,9 @@
 							User who Submitted Request
 						</th>
 						<th>
+							Description
+						</th>
+						<th>
 							Accept
 						</th>
 						<th>
@@ -173,6 +176,9 @@
 							AnimeFan
 						</td>
 						<td>
+							This is about a group of kids who try to save the world with digital monsters.
+						</td>
+						<td>
 							<button class="AddAnime">Add Anime</button>
 						</td>
 						<td>
@@ -185,6 +191,9 @@
 						</td>
 						<td>
 							LovesTheOtherAnime
+						</td>
+						<td>
+							This is the best kind of anime with stuff that's definitely going to be popular.
 						</td>
 						<td>
 							<button class="AddAnime">Add Anime</button>
