--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</div>
  	<div class="anime_info">
 		<div class="trending_anime">
-			<h1>Trending this season</h1>
+			<h1>Newest Anime</h1>
 			<div class="trending_three">
 				<ul>
 					
@@ -31,7 +31,7 @@
 			</div>
 
 			<div class="trending_reviews">
-					<h1>Trending Reviews</h1>
+					<h1>Newest Reviews</h1>
 				
 
 			</div>
