Started to separate files in folders, and to set the gets to redirect accordingly

--- a/public/Anime.html
+++ b/public/Anime.html
@@ -4,7 +4,7 @@
 <head> 
 	<meta charset="utf-8">
 	<title>Anime Page</title>
-	<link rel="stylesheet" type="text/css" href="Anime.css">
+	<link rel="stylesheet" type="text/css" href="/Anime.css">
 </head>
 
 
@@ -25,7 +25,7 @@
 	</div>
 
 
-	<script type="text/javascript" src="Anime.js"></script>
+	<script type="text/javascript" src="/js/Anime.js"></script>
 	<script> load("Kimi No Na Wa");load("Hunter X Hunter"); </script>
 </body>
 
