Changed routes on SuggestAnime and also fixed correct paths

--- a/public/SuggestAnime.html
+++ b/public/SuggestAnime.html
@@ -4,7 +4,7 @@
 <head> 
 	<meta charset="utf-8">
 	<title>Anime Page</title>
-	<link rel="stylesheet" type="text/css" href="SuggestAnime.css">
+	<link rel="stylesheet" type="text/css" href="/SuggestAnime.css">
 </head>
 
 
@@ -16,7 +16,7 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="AllAnime.html">All Anime List</a></li>	
-			<li><a href="SuggestAnime.html">Request an Anime</a></li>
+			<li><a href="/SuggestAnime">Request an Anime</a></li>
 			<li id="userName"><a href="loginRegister.html">Login/Register</a></li>
 		</ul>
 	</div>
@@ -27,8 +27,8 @@
 	</div>
 
 
-	<script type="text/javascript" src="Anime.js"></script>
-	<script type="text/javascript" src="SuggestAnime.js"></script>
+	<script type="text/javascript" src="/js/Anime.js"></script>
+	<script type="text/javascript" src="/js/SuggestAnime.js"></script>
 </body>
 
 </html>
