--- a/register.html
+++ b/register.html
@@ -22,11 +22,13 @@
 	</div>
  
 	<div id="login_or_register" >
-		<h1>Login/Register</h1>
+		<h1>Register</h1>
 		<form id="user_credentials">
 			<input id="username" class="input_element" type="text" placeholder="Username">
 			<br><br>
 			<input id="email" class="input_element" type="text" placeholder="Email">
+			<br><br>
+			<input id="dateOfBirth" class="input_element" type="text" placeholder="Date of birth">
 			<br><br>
 			<input id="password" class="input_element" type="password" placeholder="Password">
 			<br><br>
