minor change on the Anime.html to show HunterXHunter as the default anime

--- a/public/Anime.html
+++ b/public/Anime.html
@@ -27,7 +27,7 @@
 
 	<script type="text/javascript" src="/js/Anime.js"></script>
 
-	<script> load("Kimi No Na Wa");load("Hunter X Hunter");  </script>
+	<script> load("Hunter X Hunter");  </script>
 </body>
 
 </html>
