--- a/public/SuggestAnime.html
+++ b/public/SuggestAnime.html
@@ -17,7 +17,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="AllAnime.html">All Anime List</a></li>	
 			<li><a href="/SuggestAnime">Request an Anime</a></li>
-			<li id="userName"><a href="loginRegister.html">Login/Register</a></li>
+			<li id="userName"><a href="login">Login/Register</a></li>
 		</ul>
 	</div>
 	<div id="Anime">
