--- a/public/register.html
+++ b/public/register.html
@@ -16,25 +16,31 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="AllAnime.html">All Anime List</a></li>	
-			<li><a href="/SuggestAnime">Request an Anime</a></li>
+			<li><a href="/suggestanime">Request an Anime</a></li>
 			<li id = "userName"><a href="/login">Login/Register</a></li>
 		</ul>
 	</div>
  
 	<div id="login_or_register" >
-		<h1>Login/Register</h1>
+		<h1>Register</h1>
 		<form id="user_credentials">
 			<input id="username" class="input_element" type="text" placeholder="Username">
 			<br><br>
+			<input id="email" class="input_element" type="text" placeholder="Email">
+			<br><br>
+			<input id="dateOfBirth" class="input_element" type="text" placeholder="Date of birth">
+			<br><br>
 			<input id="password" class="input_element" type="password" placeholder="Password">
 			<br><br>
-			<input id="login" type="submit" value="Login">
+			<input id="confPassword" class="input_element" type="password" placeholder="Confirm password">
+			<br><br>
+		
 			<input id="register" type="submit" value="Register">
 		</form>
 	
 	</div>
 	
-	<script type="text/javascript" src="/js/loginRegister.js"></script>
+	<script type="text/javascript" src="/js/register.js"></script>
 
  </body>
 
