Moved files to correct folders

--- a/public/LoginRegister.html
+++ b/public/LoginRegister.html
@@ -4,7 +4,7 @@
 <head> 
  	<meta charset="utf-8">
     <title>Login or Register</title>
-    <link rel="stylesheet" type="text/css" href="loginRegister.css">
+    <link rel="stylesheet" type="text/css" href="./style/loginRegister.css">
  </head>
 
 
