--- a/public/SuggestAnime.html
+++ b/public/SuggestAnime.html
@@ -4,7 +4,7 @@
 <head> 
 	<meta charset="utf-8">
 	<title>Anime Page</title>
-	<link rel="stylesheet" type="text/css" href="/SuggestAnime.css">
+	<link rel="stylesheet" type="text/css" href="./style/SuggestAnime.css">
 </head>
 
 
