updated index page with routes

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head> 
  	<meta charset="utf-8">
     <title>Great Anime List</title>
-    <link rel="stylesheet" type="text/css" href="mainPage.css">
+    <link rel="stylesheet" type="text/css" href="./style/mainPage.css">
  </head>
 
 
@@ -16,8 +16,8 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="AllAnime.html">All Anime List</a></li>	
-			<li><a href="SuggestAnime.html">Request an Anime</a></li>
-			<li id = "userName"><a href="loginRegister.html">Login/Register</a></li>
+			<li><a href="/SuggestAnime">Request an Anime</a></li>
+			<li id = "userName"><a href="/login">Login/Register</a></li>
 		</ul>
 	</div>
  	<div class="anime_info">
@@ -48,8 +48,8 @@
 	    </div>
 	</div>
 	
-	<script type="text/javascript" src="mainPage.js"></script>
-	<script type="text/javascript" src="Anime.js"></script>
+	<script type="text/javascript" src="/js/mainPage.js"></script>
+	<script type="text/javascript" src="/js/Anime.js"></script>
 
  </body>
 
