Added all anime to all other files, and it to the ones that are already ready

--- a/public/AllAnime.html
+++ b/public/AllAnime.html
@@ -4,7 +4,7 @@
 <head> 
  	<meta charset="utf-8">
     <title>All Anime</title>
-    <link rel="stylesheet" type="text/css" href="AllAnime.css">
+    <link rel="stylesheet" type="text/css" href="./style/AllAnime.css">
  </head>
 
 
@@ -15,9 +15,9 @@
 	<div id="NavigationBar">
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="AllAnime.html">All Anime List</a></li>	
-			<li><a href="SuggestAnime.html">Request an Anime</a></li>
-			<li id = "userName"><a href="loginRegister.html">Login/Register</a></li>
+			<li><a href="/AllAnime">All Anime List</a></li>	
+			<li><a href="/SuggestAnime">Request an Anime</a></li>
+			<li id = "userName"><a href="/login">Login/Register</a></li>
 		</ul>
 	</div>
  	<div class="anime_info">
@@ -41,7 +41,7 @@
 	
 	</div>
 	
-	<script type="text/javascript" src="AllAnime.js"></script>
+	<script type="text/javascript" src="/js/AllAnime"></script>
 
 
  </body>
