--- a/public/Anime.html
+++ b/public/Anime.html
@@ -15,7 +15,7 @@
 	<div id="NavigationBar">
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="AllAnime.html">All Anime List</a></li>	
+			<li><a href="/AllAnime">All Anime List</a></li>	
 			<li><a href="/SuggestAnime">Request an Anime</a></li>
 			<li id="userName"><a href="/login">Login/Register</a></li>
 		</ul>
