--- a/public/register.html
+++ b/public/register.html
@@ -14,7 +14,7 @@
 	</div>
 	<div id="NavigationBar">
 		<ul>
-			<li><a href="index.html">Home</a></li>
+			<li><a href="/index">Home</a></li>
 			<li><a href="/AllAnime">All Anime List</a></li>	
 			<li><a href="/suggestanime">Request an Anime</a></li>
 			<li id = "userName"><a href="/login">Login/Register</a></li>
