--- a/public/Admin.html
+++ b/public/Admin.html
@@ -4,7 +4,7 @@
 <head> 
  	<meta charset="utf-8">
     <title>Admin Page</title>
-    <link rel="stylesheet" type="text/css" href="Admin.css">
+    <link rel="stylesheet" type="text/css" href="./style/Admin.css">
  </head>
 
 
@@ -14,10 +14,10 @@
 	</div>
 	<div id="NavigationBar">
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="AllAnime.html">All Anime List</a></li>	
-			<li><a href="SuggestAnime.html">Request an Anime</a></li>
-			<li id="userName"><a href="loginRegister.html">Login/Register</a></li
+			<li><a href="/index">Home</a></li>
+			<li><a href="/AllAnime">All Anime List</a></li>	
+			<li><a href="/SuggestAnime">Request an Anime</a></li>
+			<li id = "userName"><a href="/login">Login/Register</a></li>
 		</ul>
 	</div>
  
