--- a/public/User_Profile.html
+++ b/public/User_Profile.html
@@ -4,7 +4,7 @@
 <head> 
  	<meta charset="utf-8">
     <title>User Page</title>
-    <link rel="stylesheet" type="text/css" href="User_Profile.css">
+    <link rel="stylesheet" type="text/css" href="./style/User_Profile.css">
  </head>
 
 
@@ -14,10 +14,10 @@
 	</div>
  <div id="NavigationBar">
 	<ul>
-	  <li><a href="index.html">Home</a></li>
-	  <li><a href="AllAnime.html">All Anime List</a></li>
-	  <li><a href="SuggestAnime.html">Request an Anime</a></li>
-	  <li id="userName"><a href="User_Profile.html">Black Ninja</a></li>
+		<li><a href="/index">Home</a></li>
+		<li><a href="/AllAnime">All Anime List</a></li>	
+		<li><a href="/SuggestAnime">Request an Anime</a></li>
+		<li id = "userName"><a href="/login">Login/Register</a></li>
 	</ul>
  </div>
 
