--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 		</div>
 
 		<div class="top_ten_anime">
-			<h1>Top Ten Anime</h1>
+			<h1>Top Anime</h1>
 			<div class="top_ten">
 				<ol>	  
 				
