--- a/public/AllAnime.html
+++ b/public/AllAnime.html
@@ -41,7 +41,7 @@
 	
 	</div>
 	
-	<script type="text/javascript" src="/js/AllAnime"></script>
+	<script type="text/javascript" src="/js/AllAnime.js"></script>
 
 
  </body>
