made changes to Admin and Report (still need cookie and user server data)

--- a/public/Admin.html
+++ b/public/Admin.html
@@ -4,7 +4,7 @@
 <head> 
  	<meta charset="utf-8">
     <title>Admin Page</title>
-    <link rel="stylesheet" type="text/css" href="./style/Admin.css">
+    <link rel="stylesheet" type="text/css" href="/style/Admin.css">
  </head>
 
 
@@ -14,10 +14,10 @@
 	</div>
 	<div id="NavigationBar">
 		<ul>
-			<li><a href="/index">Home</a></li>
-			<li><a href="/AllAnime">All Anime List</a></li>	
-			<li><a href="/SuggestAnime">Request an Anime</a></li>
-			<li id = "userName"><a href="/login">Login/Register</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="AllAnime.html">All Anime List</a></li>	
+			<li><a href="SuggestAnime.html">Request an Anime</a></li>
+			<li id="userName"><a href="loginRegister.html">Login/Register</a></li
 		</ul>
 	</div>
  
@@ -46,46 +46,6 @@
 							Decline
 						</th>
 					</tr>
-					<tr>
-						<td>
-							Go****Yourself
-						</td>
-						<td>
-							ICareAboutPeople
-						</td>
-						<td>
-							Dragon Ball Z
-						</td>
-						<td>
-							This person does not really comment on the anime itself, but justs attacks people who like it. It does not follow the guidelines of being repectful on the platform.
-						</td>
-						<td>
-							<button class="BanUser">Ban User</button>
-						</td>
-						<td>
-							<button class="DoNotBan">Ignore</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							ObjectiveReviewer
-						</td>
-						<td>
-							BiggestTroll
-						</td>
-						<td>
-							Pokemon
-						</td>
-						<td>
-							This guy is just someone who always picks on me and I want him gone. He says nothing in his review and just slanders me.
-						</td>
-						<td>
-							<button class="BanUser">Ban User</button>
-						</td>
-						<td>
-							<button class="DoNotBan">Ignore</button>
-						</td>
-					</tr>
 				</tbody>
 			</table>
 		</div>
@@ -110,46 +70,12 @@
 							Decline
 						</th>
 					</tr>
-					<tr>
-						<td>
-							Digimon
-						</td>
-						<td>
-							AnimeFan
-						</td>
-						<td>
-							This is about a group of kids who try to save the world with digital monsters.
-						</td>
-						<td>
-							<button class="AddAnime">Add Anime</button>
-						</td>
-						<td>
-							<button class="IgnoreAnime">Do not Add</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							The Inappropriate Anime
-						</td>
-						<td>
-							LovesTheOtherAnime
-						</td>
-						<td>
-							This is the best kind of anime with stuff that's definitely going to be popular.
-						</td>
-						<td>
-							<button class="AddAnime">Add Anime</button>
-						</td>
-						<td>
-							<button class="IgnoreAnime">Do not Add</button>
-						</td>
-					</tr>
 				</tbody>
 			</table>
 		</div>
 	</div>
 	
-	<script type="text/javascript" src="Admin.js"></script>
+	<script type="text/javascript" src="/js/Admin.js"></script>
 
  </body>
 
