--- a/public/Report.html
+++ b/public/Report.html
@@ -32,7 +32,7 @@
 	
 	</div>
 	
-	<script type="text/javascript" src="Report.js"></script>
+	<script type="text/javascript" src="/js/Report.js"></script>
 
  </body>
 
