--- a/public/register.html
+++ b/public/register.html
@@ -28,7 +28,7 @@
 			<br><br>
 			<input id="email" class="input_element" type="text" placeholder="Email">
 			<br><br>
-			<input id="dateOfBirth" class="input_element" type="text" placeholder="Date of birth">
+			<input id="dateOfBirth" class="input_element" type="text" placeholder="Date of birth (MM/DD/YYYY)">
 			<br><br>
 			<input id="password" class="input_element" type="password" placeholder="Password">
 			<br><br>
