finished Admin functionality

--- a/public/Admin.html
+++ b/public/Admin.html
@@ -14,10 +14,10 @@
 	</div>
 	<div id="NavigationBar">
 		<ul>
-			<li><a href="/index">Home</a></li>
-			<li><a href="/AllAnime">All Anime List</a></li>	
-			<li><a href="/SuggestAnime">Request an Anime</a></li>
-			<li id="userName"><a href="/loginRegister">Login/Register</a></li
+			<li><a href="index.html">Home</a></li>
+			<li><a href="AllAnime.html">All Anime List</a></li>	
+			<li><a href="SuggestAnime.html">Request an Anime</a></li>
+			<li id="userName"><a href="loginRegister.html">Login/Register</a></li
 		</ul>
 	</div>
  
@@ -58,10 +58,10 @@
 							Anime Name
 						</th>
 						<th>
-							User who Submitted Request
+							Description
 						</th>
 						<th>
-							Description
+							Page Image
 						</th>
 						<th>
 							Accept
