--- a/public/AllAnime.html
+++ b/public/AllAnime.html
@@ -10,7 +10,7 @@
 
  <body onload="update_all_anime_page();">
  	<div class="header">
-  		<h1>Mygreatotakulist</h1>
+  		<h1>Great Anime List</h1>
 	</div>
 	<div id="NavigationBar">
 		<ul>
