--- a/public/register.html
+++ b/public/register.html
@@ -34,9 +34,12 @@
 			<br><br>
 			<input id="confPassword" class="input_element" type="password" placeholder="Confirm password">
 			<br><br>
-		
+			<input id="confPassword" class="input_element" type="password" placeholder="Please fill in the fields">
+			<br><br>
+			
 			<input id="register" type="submit" value="Register">
 		</form>
+			
 	
 	</div>
 	
